k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-scheduler
  labels:
    app.kubernetes.io/managed-by: helm
