k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-scheduler-worker
  namespace: job-scheduler
  labels:
    app: job-scheduler-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: job-scheduler-worker
  template:
    metadata:
      labels:
        app: job-scheduler-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/saikrishnans/job-scheduler-worker:latest
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 400m
              memory: 128Mi
